--- a/config.env
+++ b/config.env
@@ -1,29 +1,30 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
 # REQUIRED CONFIG
-BOT_TOKEN = ""
-GDRIVE_FOLDER_ID = ""
-OWNER_ID =
+BOT_TOKEN = "5113172483:AAHUk36yeCyJMAKaocTmxSWMJRPJmxpx0oE"
+GDRIVE_FOLDER_ID = "0ALA4Pk4NK_CkUk9PVA"
+OWNER_ID = 1938192045
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 10
 AUTO_DELETE_MESSAGE_DURATION = 20
-IS_TEAM_DRIVE = ""
-TELEGRAM_API =
-TELEGRAM_HASH = ""
+IS_TEAM_DRIVE = "True"
+TELEGRAM_API = 10412285
+TELEGRAM_HASH = "87794b324aaeb1bab8c2cf45542e51a0"
 # OPTIONAL CONFIG
 DATABASE_URL = ""
-AUTHORIZED_CHATS = ""
+AUTHORIZED_CHATS = "-1001564864874"
 SUDO_USERS = ""
 IGNORE_PENDING_REQUESTS = ""
-USE_SERVICE_ACCOUNTS = ""
+USE_SERVICE_ACCOUNTS = "True"
 INDEX_URL = ""
 STATUS_LIMIT = ""
 STOP_DUPLICATE = ""
 CMD_INDEX = ""
 UPTOBOX_TOKEN = ""
+TORRENT_TIMEOUT = ""
+EXTENTION_FILTER = ""
+INCOMPLETE_TASK_NOTIFIER = ""
 # Update
-UPSTREAM_REPO = ""
-UPSTREAM_BRANCH = ""
+UPSTREAM_REPO = "https://github.com/anasty17/mirror-leech-telegram-bot"
+UPSTREAM_BRANCH = "master"
 # Leech
 TG_SPLIT_SIZE = ""
 AS_DOCUMENT = ""
@@ -34,15 +35,14 @@ BASE_URL_OF_BOT = ""
 SERVER_PORT = ""
 WEB_PINCODE = ""
 QB_SEED = ""
-QB_TIMEOUT = ""
-# Rss
+# RSS
 RSS_DELAY = ""
 RSS_COMMAND = ""
 RSS_CHAT_ID = ""
 USER_STRING_SESSION = ""
-# Pivate Files
-ACCOUNTS_ZIP_URL = ""
-TOKEN_PICKLE_URL = ""
+# Private Files
+ACCOUNTS_ZIP_URL = "https://drive.google.com/uc?export=download&id=1lmcx1mj2pBy_ZwC1UN5qyUNV2qqITUQP"
+TOKEN_PICKLE_URL = "https://drive.google.com/uc?export=download&id=1YHpaZRkt2lHXz-axPgT4WKgaCHr5lQw3"
 MULTI_SEARCH_URL = ""
 YT_COOKIES_URL = ""
 NETRC_URL = ""
@@ -50,8 +50,6 @@ NETRC_URL = ""
 MEGA_API_KEY = ""
 MEGA_EMAIL_ID = ""
 MEGA_PASSWORD = ""
-BLOCK_MEGA_FOLDER = ""
-BLOCK_MEGA_LINKS = ""
 # Shortener
 SHORTENER = ""
 SHORTENER_API = ""
